high contrast fixes, black friday date/text

--- a/css/wcag.less
+++ b/css/wcag.less
@@ -7,8 +7,33 @@
     color: @white;
   }
 
+  .rsssl-wizard-progress-bar-value {
+    background: @black !important;
+  }
+
+  .rsssl-icon.rsssl-success {
+    color: @black !important;
+  }
+  .rsssl-icon.rsssl-success svg {
+      stroke: @black !important;
+      fill: @black !important;
+    }
+
+  .rsssl-help-warning-wrap {
+    .rsssl-notice {
+      color: @white !important;
+    }
+    .rsssl-warning {
+      background-color: @black;
+    }
+  }
+
   .progress .bar {
     background-color: @black !important;
+  }
+
+  .rsssl-notice a {
+    color: @white !important;
   }
 
   .rsssl.progress {
@@ -19,9 +44,7 @@
     background-color: @black;
   }
 
-  .rsssl-warning {
-    background-color: @black;
-  }
+
 
   .rsssl-dot-success {
     //background-color: @black !important;
